--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,4 +1,17 @@
 // This file contains all the variables used in this project's scss files.
 
+$english-font-family: 'AbsaraSans', sans-serif;
+
 $loading-indicator-size: 125px;
 $footer-height: 41px;
+
+$width-show-navigation: 950px;
+$max-width-of-content: 1000px;
+$width-content-overlap-top-image: 1000px;
+$height-content-heading: 80px;
+
+$padding-main-content: 30px;
+
+$color-grey-background: #f3f3f4;
+$color-grey-text: #66666d;
+$color-brand: #1599D6;
