--- a/app/views/admin/page_contents/show.html.erb
+++ b/app/views/admin/page_contents/show.html.erb
@@ -2,7 +2,7 @@
 
 <%
 page_title t('.title',
-             label: t('activerecord.attributes.page_content.title'),
+             label: t('activerecord.models.page_content', count: 1),
              label_value: @page_content.title)
 %>
 
