--- a/app/assets/stylesheets/components/actions.scss
+++ b/app/assets/stylesheets/components/actions.scss
@@ -1,5 +1,12 @@
+.actions-container {
+  background-color: #f9f9f9;
+  padding: 10px;
+  margin: 20px 0px;
+}
+
 .actions {
   background-color: $gray-light;
   padding: 10px;
   margin: 20px 0px;
 }
+
