--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -1,24 +1,24 @@
-<% object = @page_content %>
+<% object = @category %>
 <%= semantic_form_for [:admin,object] do |f| %>
   <%= f.semantic_errors *f.object.errors.keys %>
   <%= f.inputs do %>
-    <% if can? :create, PageContent %>
-      <%= f.input :name %>
-    <% end %>
 
     <%= render layout: 'shared/form/translated_inputs',
                locals: { object: object } do |enabled_locale, enabled_locale_name| %>
       <%= f.input "title_#{enabled_locale}",
                   label: t('shared.labels.translated_field',
-                   field: t('activerecord.attributes.page_content.title'),
+                   field: t('activerecord.attributes.category.title'),
                    language: enabled_locale_name) %>
-      <%= f.input "content_#{enabled_locale}",
+      <%= f.input "description_#{enabled_locale}",
                   as: :text,
                   label: t('shared.labels.translated_field',
-                   field: t('activerecord.attributes.page_content.content'),
+                   field: t('activerecord.attributes.category.description'),
                    language: enabled_locale_name),
                   input_html: { class: 'js-become-rich-text-editor' } %>
     <% end %>
+
+    <%= f.input :is_active, as: :radio %>
+
   <% end %>
 
   <%= f.actions do %>
