--- a/app/views/application/_head.html.erb
+++ b/app/views/application/_head.html.erb
@@ -27,7 +27,23 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
   <![endif]-->
 
-  <%= stylesheet_link_tag "application", :media => "all" %>
+  <%
+    # add extra styles if the user is signed in
+    css = ["application"]
+    if user_signed_in?
+      css << 'admin_styles'
+    end
+  %>
+  <%= stylesheet_link_tag  *(css), :media => "all" %>
+
   <%= render partial: 'application/head/favicons' %>
-  <%= javascript_include_tag "application" %>
+
+  <%
+    # add extra scripts if the user is signed in
+    js = ["application"]
+    if user_signed_in?
+      js << 'admin_scripts'
+    end
+  %>
+  <%= javascript_include_tag *(js) %>
 </head>
