--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -16,7 +16,7 @@
   <thead>
     <tr>
       <th></th>
-      <th></th>
+      <th><%=t 'activerecord.attributes.category.color_hex' %></th>
       <th><%=t 'activerecord.attributes.category.title' %></th>
       <th><%=t 'activerecord.attributes.category.is_active' %></th>
 
