--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -4,6 +4,9 @@
 
 <ul>
   <% if current_user.is?(['super_admin', 'site_admin', 'content_manager']) %>
+    <li><%= link_to t('shared.links.experiments'), admin_experiments_path %></li>
+  <% end %>
+  <% if current_user.is?(['super_admin', 'site_admin', 'content_manager']) %>
     <li><%= link_to t('shared.links.categories'), admin_categories_path %></li>
   <% end %>
   <% if current_user.is?(['super_admin', 'site_admin', 'content_manager']) %>
