--- a/app/views/application/_main.html.erb
+++ b/app/views/application/_main.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <%= bootstrap_flash %>
 
-    <% if content_for? :page_title %>
+    <% if @show_page_title == true && content_for?(:page_title) %>
       <h1 class='primary-header'><%= yield(:page_title) %></h1>
     <% end %>
 
