save arezzo files

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,7 @@ URL: https://gist.github.com/bobbygrace/9e961e8982f42eb91b80
 @import 'variables';
 @import 'media-queries';
 @import 'bootstrap_and_overrides';
+@import 'index_categories';
 @import 'formtastic_overrides';
 
 // Font awesome icons
