--- a/app/views/root/index.html.erb
+++ b/app/views/root/index.html.erb
@@ -1,9 +1,14 @@
 
+<div class = "index_categories">
+<div class = "logo">
+  <%= link_to image_tag('Logo_mecnieri.svg', class: 'logo_image') %>
+</div>
+
 <% if @categories.present? %>
-  <ul class="list-inline">
+  <ul class="categories_main">
     <% @categories.each do |category| %>
       <li>
-        <%= link_to experiments_path(category: category.slug), class: 'btn btn-default' do %>
+        <%= link_to experiments_path(category: category.slug), class: 'index_text' do %>
           <%= category.title %>
         <% end %>
       </li>
@@ -14,3 +19,4 @@
     <%= t('shared.common.no_experiments') %>
   </p>
 <% end %>
+</div>
