--- a/app/views/root/index.html.erb
+++ b/app/views/root/index.html.erb
@@ -4,6 +4,8 @@
     <% @categories.each do |category| %>
       <li>
         <%= link_to experiments_path(category: category.slug), class: 'btn btn-default' do %>
+          <%= image_tag(category.logo.url) %>
+          <br />
           <%= category.title %>
         <% end %>
       </li>
