--- a/app/views/root/index.html.erb
+++ b/app/views/root/index.html.erb
@@ -1,11 +1,13 @@
 
 <div class = "index_categories">
-<div class = "logo">
-  <%= link_to image_tag('Logo_mecnieri.svg', class: 'logo_image') %>
-</div>
+
 
 <% if @categories.present? %>
   <ul class="categories_main">
+      <li class = "logo">
+        <%= link_to image_tag('Logo_mecnieri.svg', class: 'logo_image') %>
+      </li>
+
     <% @categories.each do |category| %>
       <li>
         <%= link_to experiments_path(category: category.slug), class: 'index_text' do %>
