--- a/app/assets/stylesheets/index_categories.scss
+++ b/app/assets/stylesheets/index_categories.scss
@@ -1,5 +1,7 @@
 
-/* test run*/
+/* index css*/
+
+/* setting background color*/
 body.root.index {
 	background-color: #70BAF7;
 }
@@ -12,6 +14,11 @@ body.root.index .navbar-default {
     border: 0;
 }
 
+body.root.index .container {
+  
+width:98vw;
+}
+
 /*  category blocks */
 .index_categories{
 	text-align: center;
@@ -19,79 +26,79 @@ body.root.index .navbar-default {
 .index_categories li{
 	display: inline-block;
 	margin: 15px;
-	height: 250px;
-	width: 300px;
-	border: 1px solid;
-	color: black;
+  margin-top: 5px;
+  margin-bottom: 25px;
+	color: #2D1E49;
 	text-align: center;
-
-
 }
 
-/* text within category blocks */
-
-.index_text{
-	display: block;
-	font-size: 26px;
-	margin:40px;
-	margin-top: 40%;
-	color:inherit;
-	text-decoration: none;
-
-
-
-
+.index_categories li {
+  height: 359.662px;
+  width: 442.212px;
+  position: relative;
+  text-align: center;
+}
+.categoty_image {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+.index_text {
+  z-index: 100;
+  position: absolute;
+  left: 130px;
+  top: 240px;
+  font-size: 38px;
+  color:inherit;
+}
+/* hover*/
+.index_categories li:hover {
+	color:#596dd5;
 }
 .index_text:hover{
 	text-decoration: none;
 	color:inherit;
 }
 
-.index_categories li:hover {
-	color:#596dd5;
-	border-color: #596dd5;
-}
+
 /* logo div */
 
 .index_categories .logo{
 	text-align: left;
-	border:0;
 }
 /* logo image*/
 
 .logo_image{
-	position:relative;
-	margin-top: 0px;
+  position: absolute;
+  left: 0;
+  top: 0;
 }
 
 
-/* medium resolution */
+/* adjusting margins for medium sized window*/
+@media (max-width: 1520px){
 
-@media (max-width: 1215px){
-
-	.index_categories li, .logo{
-		height: 250px;
-		width: 350px;
-		margin-right: 30px;
-		margin-left: 30px;
-		margin-bottom: 40px;
-	}
-	
-	.logo{
-	
-	}
-
+  .index_categories li, .logo{
+    /* not sure if calc function works*/
+  	margin-left: calc((100vw-1326px)/6);
+  	margin-right:calc((100vw-1326px)/6);
+  }
 }
+/* smartphone size, because icons are so large most margins removed*/
 
-/* small resolution */
+@media (max-width: 500px){
 
+  .index_categories li, .logo{
+  	margin-left: 0px;
+  	margin-right: 0px;
 
-@media (max-width: 830px){
-	.index_categories li, .logo{
-		height: 50vw;
-		width: 60vw;
+  }
+  body.root.index .container {
+  
+	width:100vw;
+	margin-left: 0px;
+	margin-right: 0px;
+	padding: 0px;
 }
-
+ 
 }
-
-
