--- a/config/nginx_ssl.conf.erb
+++ b/config/nginx_ssl.conf.erb
@@ -134,6 +134,15 @@ server {
     root html;
   }
 
+  if ($request_method !~ ^(GET|HEAD|PUT|POST|DELETE)$ ){
+    return 405;
+  }
+
+  ###########################################
+  # Maintenance
+
+  # Rename public/maintenance_disabled.html to public/maintenance.html
+  # to make all site requests redirect to the maintenance page.
   location @503 {
     error_page 405 = /system/maintenance.html;
     if (-f $document_root/system/maintenance.html) {
@@ -142,16 +151,8 @@ server {
     rewrite ^(.*)$ /503.html break;
   }
 
-  if ($request_method !~ ^(GET|HEAD|PUT|POST|DELETE)$ ){
-    return 405;
-  }
-
   if (-f $document_root/system/maintenance.html) {
     return 503;
-  }
-
-  location ~ \.(php|html)$ {
-    return 405;
   }
 
   ###########################################
