--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,7 +1,8 @@
 <footer class='app-footer'>
-  <p class='app-footer-left'>&copy; <%= Time.now.year %></p>
-  <%= link_to image_tag('jumpstart-logo.png', class: 'app-footer-right'),
+  <%= link_to image_tag('jumpstart_logo.svg', class: 'app-footer-right'),
               'http://jumpstart.ge',
               target: '_blank',
               title: t('shared.common.jumpstart.slogan') %>
+  <p class='app-footer-left'>&copy; <%= Time.now.year %> | </p>
+
 </footer>
