--- a/app/views/root/index.html.erb
+++ b/app/views/root/index.html.erb
@@ -7,6 +7,11 @@
   <ul class="categories_main">
       <li class = "logo">
         <%= image_tag('Logo_mecnieri.svg', class: 'logo_image') %>
+
+        <!-- hard-coded; will probably have to be fixed         -->
+        <p class="logo-text">
+          ექსპერიმენტები განკუთვნილია <br>  12 წლამდე ასაკის ბავშვებისთვის.<br>  <b>სცადე, მარტივია!</b>
+        </p>
       </li>
 
     <% @categories.each do |category| %>
