--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -9,7 +9,7 @@
           object: @user,
           index_path: admin_users_path,
           show_path: admin_user_path,
-          edit_path: edit_user_content_path
+          edit_path: edit_admin_user_path
                 }
   %>
 </div>
