--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,7 @@ URL: https://gist.github.com/bobbygrace/9e961e8982f42eb91b80
 @import 'media-queries';
 @import 'bootstrap_and_overrides';
 @import 'index_categories';
+@import 'categories';
 @import 'formtastic_overrides';
 
 // Font awesome icons
