--- a/app/assets/stylesheets/index_categories.scss
+++ b/app/assets/stylesheets/index_categories.scss
@@ -20,10 +20,10 @@ width:98vw;
 }
 
 /*  category blocks */
-.index_categories{
+body.root.index .index_categories{
 	text-align: center;
 }
-.index_categories li{
+body.root.index .index_categories li{
 	display: inline-block;
 	margin: 15px;
   margin-top: 5px;
@@ -35,12 +35,12 @@ width:98vw;
   position: relative;
   text-align: center;
 }
-.categoty_image {
+body.root.index .categoty_image {
   position: absolute;
   left: 0;
   top: 0;
 }
-.index_text {
+body.root.index .index_text {
   z-index: 100;
   position: absolute;
   
@@ -51,15 +51,15 @@ width:98vw;
   transform: translateX(-50%);
 }
 /* hover*/
-.index_categories li:hover {
+body.root.index .index_categories li:hover {
 	color:#596dd5;
 }
-.index_text:hover{
+body.root.index .index_text:hover{
 	text-decoration: none;
 	color:inherit;
 }
 /* manages the text paragraph of the logo, seperate class because of seperate hover */
-.logo .logo-text {
+body.root.index .logo .logo-text {
   z-index: 100;
   position: absolute;
   top: 260px;
@@ -75,7 +75,7 @@ width:98vw;
 
 /* logo image*/
 
-.logo_image{
+body.root.index .logo_image{
   position: absolute;
   top: 60px;
   left: 50%;
