--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -7,6 +7,9 @@ body.root.experiments .container .main {
 	height: 100px;
 }
 
+body.root.experiments .exp-categories ul{
+  text-align: center;
+}
 body.root.experiments .exp-categories li{
   display: inline-block;
   margin: 15px;
@@ -15,7 +18,7 @@ body.root.experiments .exp-categories li{
   color: #2D1E49;
   text-align: center;
   height: 110px;
-  width: 120px;
+  width: 110px;
   position: relative;
   text-align: center;
 }
@@ -34,6 +37,10 @@ body.root.experiments .exp-categories .index_text {
   transform: translateX(-50%);
 }
 
+body.root.experiments .exp-categories .index_text a{
+  color: inherit;
+}
+
 
 body.root.experiments .exp-categories .logo_image {
   position: absolute;
@@ -46,6 +53,69 @@ body.root.experiments .exp-categories .categories-list {
 	margin-right: 4vw;
 	margin-left: 4vw;
 }
-body.root.experiments .exp-list li{
+
+body.root.experiments .exp-categories li:hover {
+  color:#596dd5;
+}
+
+body.root.experiments .exp-categories .index_text a:hover{
+  text-decoration: none;
+  color:inherit;
+}
+
+
+@media (max-width: 1600px) {
+  body.root.experiments .exp-categories .categories-list {
+    margin-right: 3vw;
+    margin-left: 3vw;
+}
 
 }
+
+@media (max-width: 1250px) {
+  body.root.experiments .exp-categories .categories-list {
+    margin-right: 1vw;
+    margin-left: 1vw;
+}
+
+}
+
+@media (max-width: 1075px) {
+  body.root.experiments .exp-categories .categories-list {
+    margin-right: 0vw;
+    margin-left: 0vw;
+}
+  body.root.experiments .lcategories_main{
+    padding-left: 0px;
+  }
+}
+
+@media (max-width: 840px) {
+  body.root.experiments .lcategories_main{
+    padding-left: 0px;
+  }
+}
+
+@media (max-width: 790px) {
+  body.root.experiments .exp-categories .categories-list{
+    width: 90%
+  }
+  body.root.experiments .exp-categories .categoty_image {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  body.root.experiments .exp-categories .logo_image {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  body.root.experiments .exp-categories .index_text {
+    font-size: 14px
+}
+
+}
+
+
+body.root.experiments .exp-list li{
+  
+}
+
