--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -116,6 +116,46 @@ body.root.experiments .exp-categories .index_text a:hover{
 
 
 body.root.experiments .exp-list li{
-  
+  display: inline-block;
+  margin: 15px;
+  margin-top: 5px;
+  margin-bottom: 25px;
+  color: #2D1E49;
+  text-align: center;
+  height: 400px;
+  width: 442.212px;
+  position: relative;
+  text-align: center;
+  background-color: red;
 }
 
+body.root.experiments .exp-list .exp-thumbnail{
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: block;
+  height: 265px;
+  background-color: black;
+}
+
+body.root.experiments .exp-list .exp-text {
+  z-index: 100;
+  position: absolute;
+  top: 260px;
+  font-size: 16px;
+  color:inherit;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+body.root.experiments .exp-list .exp-title{
+  display: block;
+  background-color: green;
+  color: white;
+}
+
+body.root.experiments .exp-list .exp-description{
+  display: block;
+  background-color: white;
+  color: black;
+}
