changed to allow multiple images for exp directions; fixed order of experiment form fields

--- a/app/assets/stylesheets/admin_styles.scss
+++ b/app/assets/stylesheets/admin_styles.scss
@@ -67,3 +67,7 @@ fieldset.form-actions{
 .formtastic .table-directions  .text textarea{
   width: 100%;
 }
+
+.delete-direction{
+  margin-top: 60px;
+}
