--- a/app/views/admin/experiments/_form.html.erb
+++ b/app/views/admin/experiments/_form.html.erb
@@ -43,6 +43,7 @@
                 <%= render partial: 'ingredient_fields', locals: {f: ingredient, object: ing, enabled_locale: enabled_locale} %>
               <% end %>
             <% end %>
+          </tbody>
           <tfoot>
             <tr>
               <td colspan="3">
@@ -54,7 +55,6 @@
               </td>
             </tr>
           </tfoot>
-          </tbody>
         </table>
 
 
@@ -65,16 +65,11 @@
         <table class="table table-striped table-hover table-nonfluid table-directions" data-type='directions'>
           <thead>
             <tr>
-              <th></th>
-              <th style="width: 50%;">
-                <%= t('shared.labels.translated_field',
-                         field: t('activerecord.attributes.direction.content'),
-                         language: enabled_locale_name)
-                %><abbr title="required">*</abbr>
+              <th>
               </th>
               <th>
                 <%= t('shared.labels.translated_field',
-                         field: t('activerecord.attributes.direction.image'),
+                         field: t('activerecord.attributes.direction.content'),
                          language: enabled_locale_name)
                 %><abbr title="required">*</abbr>
               </th>
@@ -89,6 +84,7 @@
                 <%= render partial: 'direction_fields', locals: {f: direction, object: dir, dir_index: dir_index, enabled_locale: enabled_locale} %>
               <% end %>
             <% end %>
+          </tbody>
           <tfoot>
             <tr>
               <td colspan="3">
@@ -100,9 +96,78 @@
               </td>
             </tr>
           </tfoot>
-          </tbody>
         </table>
 
+        <% if enabled_locale == I18n.default_locale.to_s %>
+          <hr />
+
+          <h3><%= t('activerecord.models.direction_image', count: 999) %></h3>
+
+          <table class="table table-striped table-hover table-nonfluid table-images" data-type='images'>
+            <thead>
+              <tr>
+                <th style="width: 40%;">
+                  <%= t('shared.labels.translated_field',
+                           field: t('activerecord.attributes.direction.content'),
+                           language: enabled_locale_name)
+                  %><abbr title="required">*</abbr>
+                </th>
+                <th>
+                  <%= t('shared.labels.translated_field',
+                           field: t('activerecord.attributes.direction.image'),
+                           language: enabled_locale_name)
+                  %><abbr title="required">*</abbr>
+                </th>
+              </tr>
+            </thead>
+            <tbody>
+              <% object.directions.sorted.each_with_index do |dir, dir_index| %>
+                <%= f.semantic_fields_for :directions, dir do |f_direction| %>
+                  <tr>
+                    <td>
+                      <%= dir.content %>
+                    </td>
+                    <td>
+                      <table class="table table-striped table-hover table-nonfluid table-direction-images" data-type='direction-images'>
+                        <thead>
+                          <tr>
+                            <th>
+                              <%=t 'shared.common.actions' %>
+                            </th>
+                            <th>
+                              <%= t('shared.labels.translated_field',
+                                       field: t('activerecord.attributes.direction.image'),
+                                       language: enabled_locale_name)
+                              %><abbr title="required">*</abbr>
+                            </th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <% dir.images.sorted.each_with_index do |img, img_index| %>
+                            <%= f_direction.semantic_fields_for :images, img do |image| %>
+                              <%= render partial: 'image_fields', locals: {f: image, object: img, img_index: img_index, dir_index: dir_index, enabled_locale: enabled_locale} %>
+                            <% end %>
+                          <% end %>
+                        </tbody>
+                        <tfoot>
+                          <tr>
+                            <td colspan="2">
+                              <%= link_to_add_association t('shared.actions.add'), f_direction, :images,
+                                    :'data-association-insertion-node' => "#translation-#{enabled_locale} table.table-direction-images:eq(#{dir_index}) tbody",
+                                    :'data-association-insertion-method' => 'append',
+                                    class: 'btn btn-primary',
+                                    render_options: {locals: {enabled_locale: enabled_locale, dir_index: dir_index}} %>
+                            </td>
+                          </tr>
+                        </tfoot>
+                      </table>
+                    </td>
+                  </tr>
+                <% end %>
+              <% end %>
+            </tbody>
+          </table>
+        <% end %>
 
         <hr />
 
