--- a/app/views/root/experiments.html.erb
+++ b/app/views/root/experiments.html.erb
@@ -1,21 +1,30 @@
-<% page_title t('.title') %>
+<% page_title t('.title') 
+   title_color = '#000'
+   %>
 <div class ="exp-categories">
 <% if @categories.present? %>
   <ul class="lcategories_main">
     <li class = "logo">
         <%= image_tag('Logo_mecnieri.svg', class: 'logo_image') %>
     </li>
-    <% @categories.each do |category| %>
+    <% @categories.each do |category| 
+      if params[:category] == category.slug 
+        title_color = category.color_hex
+        class_name = '1'
+      else
+        class_name = '2'
+        end
+      %>
       <li class = "categories-list">
-        <%= link_to params.merge(category: category.slug),  class: params[:category] == category.slug ? 'cat' : 'cat' do %>
+        <%= link_to params.merge(category: category.slug),  class: class_name do %>
         <div class="categoty_image">
           <%= image_tag(category.logo.url, width: '110px') %>
           </div>
           <div class="index_text">
           <br />
           <%= category.title %>
-        <% end %>
           </div>
+        <% end %>
       </li>
     <% end %>
   </ul>
@@ -30,13 +39,11 @@
       <li>
         <%= link_to experiment_path(experiment) do %>
           <% if experiment.thumbnail1.exists? %>
-            <div class="exp-thumbnail">
-              <%= image_tag(experiment.thumbnail1.url('big'), alt: experiment.title) %>
-              <%= image_tag(experiment.thumbnail2.url('big'), alt: experiment.title) %>
-            </div>
+              <%= image_tag(experiment.thumbnail1.url('big'), alt: experiment.title, class: "exp-thumbnail1") %> 
+              <%= image_tag(experiment.thumbnail2.url('big'), alt: experiment.title, class: "exp-thumbnail2") %>
           <% end %>
           <div class="exp-text">
-          <div class="exp-title">
+          <div class="exp-title", style="background-color: <%= title_color %>">
             <%= experiment.title %>
           </div>
           <div class="exp-description">
