--- a/app/views/root/experiments.html.erb
+++ b/app/views/root/experiments.html.erb
@@ -35,8 +35,10 @@
 <div class="exp-list">
 <% if @experiments.present? %>
   <ul>
-    <% @experiments.each do |experiment| %>
-      <li>
+    <% @experiments.each_with_index  do |experiment, index|
+    class_name = index < 2 ? 'big': "smaller" %>
+
+      <li class='<%= class_name %>'>
         <%= link_to experiment_path(experiment) do %>
           <% if experiment.thumbnail1.exists? %>
               <%= image_tag(experiment.thumbnail1.url('big'), alt: experiment.title, class: "exp-thumbnail1") %> 
