move cat logo and color to assets

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,4 +34,5 @@ URL: https://gist.github.com/bobbygrace/9e961e8982f42eb91b80
 @import 'components/tabList';
 @import 'components/tabContent';
 @import 'components/translated_inputs';
+@import 'components/categories';
 
