--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -15,3 +15,12 @@ $padding-main-content: 30px;
 $color-grey-background: #f3f3f4;
 $color-grey-text: #66666d;
 $color-brand: #1599D6;
+
+
+// category colors
+$biologia-color: #98d84d;
+$injineria-color: #40b4f1;
+$astronomia-color: #5e439c;
+$qimia-color: #f9a334;
+$fizika-color: #576adc;
+
