--- a/app/views/admin/categories/show.html.erb
+++ b/app/views/admin/categories/show.html.erb
@@ -19,9 +19,9 @@ page_title t('shared.labels.model_object_title',
   <dt><strong><%=t 'activerecord.attributes.category.title' %>:</strong></dt>
   <dd><%= @category.title %></dd>
   <dt><strong><%=t 'activerecord.attributes.category.logo' %>:</strong></dt>
-  <dd><%= image_tag(@category.logo.url) %></dd>
+  <dd><%= image_tag(@category_icon_path(category.slug)) %></dd>
   <dt><strong><%=t 'activerecord.attributes.category.color_hex' %>:</strong></dt>
-  <dd><div style="background-color: <%= @category.color_hex %>; width: 20px;">&nbsp;</div></dd>
+  <dd><div class="category-background-color <%= @category.slug %>" style="width: 20px;">&nbsp;</div></dd>
   <dt><strong><%=t 'activerecord.attributes.category.is_active' %>:</strong></dt>
   <dd><%= @category.is_active %></dd>
   <dt><strong><%=t 'activerecord.attributes.category.description' %>:</strong></dt>
