--- a/app/views/root/index.html.erb
+++ b/app/views/root/index.html.erb
@@ -17,7 +17,7 @@
     <% @categories.each do |category| %>
       <li>
         <!-- had to put image first, then text. couldn't find a good way to position them if they were in reverse order -->
-          <%= link_to(image_tag(category.logo.url, class: 'categoty_image'), experiments_path(category: category.slug))%>
+          <%= link_to(image_tag(category_icon_path(category.slug), class: 'categoty_image'), experiments_path(category: category.slug))%>
           <%= link_to category.title, experiments_path(category: category.slug), class: 'index_text' %>
       </li>
     <% end %>
